Create bank of resume
