# internal/models/legislation.go
@@ -1,0 +1,17 @@
+package models
+
+import "time"
+
+type Legislation struct {
+	ID          uint   `gorm:"primaryKey"`
+	Title       string `gorm:"size:255;not null"`
+	Description string `gorm:"not null"`
+	UserID      uint
+	CreatedAt   time.Time
+	UpdatedAt   time.Time
+}
+
+type LegislationSubtopic struct {
+	LegislationID uint `gorm:"primaryKey"`
+	SubtopicID    uint `gorm:"primaryKey"`
+}
